responsive layout bug fix

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ nav ul ul ul li{
 
     nav ul li, nav ul ul li{
         display: block;
-        width: 100%;
+        width:98%;
     }
 
     nav ul ul {
